# AbioGen

./: .gitignore  ISSUES.md  LICENSE  README.md  ledger.json  pyproject.toml  results.json  sweep_results.json
.github/workflows/: ci.yml
pot/: __init__.py  archive.py  baseline.py  bff.py  cosmos.py  experiment.py  hunt.py  ledger.py  live.py  observatory.py  soup.py  sweep.py  util.py
research/: INDEX.md  README.md  hunt_results.json
research/runs/20260707T171508Z_first-findings/: manifest.json  replicator_seed2.json  two_arm.json
rust/: Cargo.toml
rust/src/: lib.rs
tests/: test_bff.py  test_cosmos.py  test_honesty.py  test_observatory.py
web/: build_site.py  index.html  live.html
