[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "abiogen"
version = "0.1.0"
description = "AbioGen — an accelerated origin-of-intelligence engine: order out of pure noise, or not."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "the-pot" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.maturin]
# Mixed Rust/Python layout: the Python package `pot/` lives at the repo root,
# the Rust crate lives in `rust/`. The compiled extension lands at `pot/_rust`.
manifest-path = "rust/Cargo.toml"
python-source = "."
module-name = "pot._rust"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
